Curso Alura Logica de Programación 2

--- a/cursos_en_progreso/one_oracle_next_education/principiante_en_programacion/logica_de_programacion/Logica Progrmación 2/2035-logica-programacion-2-Aula1/index.html
+++ b/cursos_en_progreso/one_oracle_next_education/principiante_en_programacion/logica_de_programacion/Logica Progrmación 2/2035-logica-programacion-2-Aula1/index.html
@@ -20,6 +20,7 @@
                 <div class="container__texto">
                     <h1></h1>
                     <p class="texto__parrafo"></p>
+                    <h4 id="juegosRestantes"></h4>
                 </div>
                 <input type="number" id="numeroUsuario" min="1" max="10" class="container__input">
                 <div class="chute container__botones">
