Challenge Alura Geek HTML - CSS

--- a/cursos_en_progreso/one_oracle_next_education/Front End G7 - ONE/Challenges/challenge-one-portafolio-latam-repositorio-base/index.html
+++ b/cursos_en_progreso/one_oracle_next_education/Front End G7 - ONE/Challenges/challenge-one-portafolio-latam-repositorio-base/index.html
@@ -15,8 +15,7 @@
 <body>
     <!-- Menú -->
     <header class="cabecera">
-        <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
-        <h1 class="cabecera__titulo">Alura Latam</h1>
+        <h1 class="cabecera__titulo"><b>Huenu Lihuel Capdevila Vicente</b></h1>
         <nav class="navegacion">
             <ul class="navegacion__lista">
                 <li class="navegacion__elemento"><a href="#sobre-mi">Sobre mí</a></li>
@@ -27,14 +26,16 @@
                 <li class="navegacion__elemento"><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
+        <h3 class="cabecera__email">huecap7@gmail.com</h2>
     </header>
 
     <!-- Sección de Presentación -->
     <section class="presentacion">
-        <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
+        <img class="presentacion__foto" src="assets/imagen.jpeg" alt="Foto de perfil">
         <div class="presentacion__contenedor">
-            <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
-            <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+            <h2 class="presentacion__titulo">Hello, I am Huenu Lihuel Capdevila Vicente</h2>
+            <p class="presentacion__subtitulo">I'm  a Systems Engineering student looking for new experiences to develop 
+                my hard and soft skills as a developer.</p>
             <ul class="redes">
                 <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
                 <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
@@ -47,10 +48,15 @@
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
-        <!-- Firma opcional -->
-        <img class="sobre-mi__firma" src="assets/signature.png" alt="Firma">
+        <div class="sobre_mi_texto_contenedor">
+            <p class="sobre-mi__texto">I excel in teamwork and understand the importance of effective communication and collaboration</p>
+            <p class="sobre-mi__texto">My good humor and creativity allow me to approach problems with a fresh perspective and find innovative solutions. </p>
+            <p class="sobre-mi__texto">I constantly seek new opportunities to develop my programming and business skills and am committed to lifelong learning.</p>
+        </div>  
+        <div class="sobre-mi-quote">
+            <p class="quote_text">"You must be the change you wish to see in the world"</p>
+            <p class="quote_description"><b>Mahatma Gandhi</b></p>
+        </div>
     </section>
 
     <!-- Sección de Habilidades -->
@@ -58,7 +64,7 @@
         <h2 class="habilidades__titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icono" src="assets/html.png" alt="HTML">
+                <img class="habilidades__icono" src="assets/htlm.png" alt="HTML">
                 <p class="habilidades__nombre">HTML 5</p>
             </li>
             <li class="habilidades__elemento">
@@ -146,13 +152,17 @@
     <!-- Sección de Proyectos -->
     <section class="proyectos" id="proyectos">
         <h2 class="proyectos__titulo">Experiencia Profesional</h2>
+        
         <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
-        </div>
-        <div class="proyectos__contenedor">
-            <h3 class="proyectos__nombre">Título de la Experiencia</h3>
-            <p class="proyectos__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+            <h3 class="proyectos__nombre">Portafolio V3.0</h3>
+            <a href="https://huecap.github.io/HuenuPortafolio/" target="_blank" >
+                <img class="proyectos__previsualizacion"   src="./assets/portfoliopng.png" alt="Vista previa del sitio">
+              </a>
+              <div class="proyectos_descripcion_contenedor" >
+                  <a class="proyectos__descripcion" href="https://huecap.github.io/HuenuPortafolio/" target="_blank">This was my first web page, and it's a journey I'm excited to share. 
+                    Built with passion and curiosity, this page marks the beginning of my adventure in web development. 
+                    From the basics of HTML and CSS, every line of code reflects my growth and learning. </a>
+                </div>
         </div>
     </section>
 
